rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_e_e115_2010_E115v2.01.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_e_e115_2010_E115v2.01.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 8, column 2]
    │
    │ 
 08 │  E115NumericString ::= [NAME AS "NumericString"] ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 09 │             UTF8String (FROM ( {0, 0, 0, 48}..{0, 0, 0, 57} ))
    │
────╯
