rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_f_f515_2003_Xml.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_f_f515_2003_Xml.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod xml {
    extern crate alloc;
    use super::xsd::{AnyURI, Language, NCName};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct Base(pub AnyURI);
    #[doc = " The XSD module is defined in the ASN.1 standards."]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct Lang(pub Language);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum Space {
        default = 0,
        preserve = 1,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct SpecialAttrs {
        pub base: Option<Base>,
        pub lang: Option<Lang>,
        pub space: Option<Space>,
    }
    impl SpecialAttrs {
        pub fn new(base: Option<Base>, lang: Option<Lang>, space: Option<Space>) -> Self {
            Self { base, lang, space }
        }
    }
}
