rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_g_g774.1_2001_SDHPMASN1.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_g_g774.1_2001_SDHPMASN1.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod sdhpmasn1 {
    extern crate alloc;
    use super::attribute_asn1_module::ProbableCause;
    use super::metric_module::TimePeriod;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " Anonymous SET OF member "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(identifier = "SEQUENCE")]
    pub struct AnonymousCSES {
        #[rasn(identifier = "eventTime")]
        pub event_time: GeneralizedTime,
        #[rasn(identifier = "nCSES")]
        pub n_cses: NCSESRange,
    }
    impl AnonymousCSES {
        pub fn new(event_time: GeneralizedTime, n_cses: NCSESRange) -> Self {
            Self { event_time, n_cses }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct CSES(pub SetOf<AnonymousCSES>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct Integer(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("2..=9"))]
    pub struct NCSESRange(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct SDHGranularityPeriod(pub TimePeriod);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct SDHPVGranularityPeriod(pub TimePeriod);
    pub static G774_01_ATTRIBUTE: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PM, &[7u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_01_MOBJECT_CLASS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PM, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_01_NAME_BINDING: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PM, &[6u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_01_PACKAGE: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PM, &[4u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static SDH_PM: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::const_new(&[0u32, 0u32, 7u32, 774u32, 127u32, 1u32, 0u32]).to_owned()
    });
}
