rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_g_g774.2_2001_SDHConfASN1.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_g_g774.2_2001_SDHConfASN1.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod sdhconf_asn1 {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum AUGStructureInfo {
        #[rasn(tag(context, 0))]
        oneAU4(ConnectionInfo),
        #[rasn(size("1..=3"), tag(context, 1))]
        threeAU3(SequenceOf<ConnectionInfo>),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum ClientType {
        noClient = 0,
        c139264AsynchronousMappingClientType = 1,
        c44736AsynchronousMappingClientType = 2,
        c34AsynchronousMappingClientType = 3,
        c6312AsynchronousMappingClientType = 4,
        c6312BitSynchronousMappingClientType = 5,
        c6312ByteSynchronousMappingClientType = 6,
        c2048AsynchronousMappingClientType = 7,
        c2048BitSynchronousMappingClientType = 8,
        c2048ByteSynchronousMappingClientType = 9,
        c1544AsynchronousMappingClientType = 10,
        c1544BitSynchronousMappingClientType = 11,
        c1544ByteSynchronousMappingClientType = 12,
        aTMClientType = 13,
        fDDIClientType = 14,
        mANClientType = 15,
    }
    #[doc = " NOTE - The identification of the different type of adaptation functions"]
    #[doc = " for a single type of characteristic  information is for further study."]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum ConnectionInfo {
        crossConnectable = 1,
        notCrossConnectable = 2,
        unknown = 3,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct DefineClientTypeInfo(pub ClientType);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum DefineSDHStructureError {
        structureNotSupported = 0,
        tpNotCrossConnectable = 1,
        tpAlreadyCrossConnected = 2,
        unknown = 3,
    }
    #[doc = "  ordered according to the time sequence"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum TUG2StructureInfo {
        #[rasn(tag(context, 0))]
        oneTU2(ConnectionInfo),
        #[rasn(size("1..=3"), tag(context, 1))]
        threeTU12(SequenceOf<ConnectionInfo>),
        #[rasn(size("1..=4"), tag(context, 2))]
        fourTU11(SequenceOf<ConnectionInfo>),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum TUG3StructureInfo {
        #[rasn(tag(context, 0))]
        oneTU3(ConnectionInfo),
        #[rasn(size("1..=7"), tag(context, 1))]
        sevenTUG2(SequenceOf<TUG2StructureInfo>),
    }
    #[doc = "  ordered according to the time sequence"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum VC3StructureInfo {
        #[rasn(tag(context, 0))]
        notSubmultiplexed(ClientType),
        #[rasn(size("1..=7"), tag(context, 1))]
        sevenTUG2(SequenceOf<TUG2StructureInfo>),
    }
    #[doc = "  ordered according to the time sequence"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum VC4StructureInfo {
        #[rasn(tag(context, 0))]
        notSubmultiplexed(ClientType),
        #[rasn(size("1..=3"), tag(context, 1))]
        threeTUG3(SequenceOf<TUG3StructureInfo>),
    }
    pub static G774_02_ACTION: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_CONF, &[9u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_02_MOBJECT_CLASS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_CONF, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_02_NAME_BINDING: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_CONF, &[6u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_02_PARAMETER: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_CONF, &[5u32]].concat())
            .unwrap()
            .to_owned()
    });
    #[doc = "  EXPORTS everything"]
    pub static SDH_CONF: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::const_new(&[0u32, 0u32, 7u32, 774u32, 127u32, 2u32, 0u32]).to_owned()
    });
}
