rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_g_g774.5_2001_SDHCSASN1.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_g_g774.5_2001_SDHCSASN1.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod sdhcsasn1 {
    extern crate alloc;
    use super::sdh::PathTrace;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(delegate)]
    pub struct Boolean(pub bool);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(delegate)]
    pub struct Null(pub ());
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct PathTraceRS(pub GraphicString);
    pub const DEFAULT_NULL: Null = Null(());
    pub static G774_05_ATTRIBUTE: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_CS, &[7u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_05_MOBJECT_CLASS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_CS, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_05_NAME_BINDING: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_CS, &[6u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_05_PACKAGE: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_CS, &[4u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static SDH_CS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::const_new(&[0u32, 0u32, 7u32, 774u32, 127u32, 5u32, 0u32]).to_owned()
    });
}
