rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_g_g774.6_2001_SDHPMUNIASN1.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_g_g774.6_2001_SDHPMUNIASN1.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod sdhpmuniasn1 {
    extern crate alloc;
    use super::metric_module::TimePeriod;
    use super::sdhpmasn1::{SDHGranularityPeriod, SDHPVGranularityPeriod};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static G774_01_ATTRIBUTE: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PM, &[7u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_01_MOBJECT_CLASS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PM, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_01_NAME_BINDING: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PM, &[6u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_01_PACKAGE: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PM, &[4u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_6_ATTRIBUTE: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PMUNI, &[7u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_6_MOBJECT_CLASS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PMUNI, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_6_NAME_BINDING: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PMUNI, &[6u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_6_PACKAGE: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PMUNI, &[4u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static SDH_PM: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::const_new(&[0u32, 0u32, 7u32, 774u32, 127u32, 1u32, 0u32]).to_owned()
    });
    pub static SDH_PMUNI: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::const_new(&[0u32, 0u32, 7u32, 774u32, 127u32, 6u32, 0u32]).to_owned()
    });
}
