rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_g_g774.7_2001_SDHPTLASN1.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_g_g774.7_2001_SDHPTLASN1.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod sdhptlasn1 {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(delegate)]
    pub struct Null(pub ());
    pub static G774_7_ACTION: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PTL, &[9u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_7_ATTRIBUTE: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PTL, &[7u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_7_NAME_BINDING: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PTL, &[6u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_7_NOTIFICATION: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PTL, &[10u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_7_OBJECT_CLASS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PTL, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_7_PACKAGE: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PTL, &[4u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_7_PARAMETER: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_PTL, &[5u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub const NULL_DEFAULT: Null = Null(());
    #[doc = " EXPORTS everything"]
    pub static SDH_PTL: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::const_new(&[0u32, 0u32, 7u32, 774u32, 127u32, 7u32, 0u32]).to_owned()
    });
}
