rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_g_g774.8_2001_SDHRadioManagement.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_g_g774.8_2001_SDHRadioManagement.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod sdhradio_management {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static G774_8_ACTION: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_RADIO_MANAGEMENT, &[9u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_8_ATTRIBUTE: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_RADIO_MANAGEMENT, &[7u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_8_NAME_BINDING: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_RADIO_MANAGEMENT, &[6u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_8_NOTIFICATION: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_RADIO_MANAGEMENT, &[10u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_8_OBJECT_CLASS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_RADIO_MANAGEMENT, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_8_PACKAGE: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_RADIO_MANAGEMENT, &[4u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static G774_8_PARAMETER: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SDH_RADIO_MANAGEMENT, &[5u32]].concat())
            .unwrap()
            .to_owned()
    });
    #[doc = " EXPORTS Everything"]
    pub static SDH_RADIO_MANAGEMENT: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::const_new(&[0u32, 0u32, 7u32, 774u32, 127u32, 8u32, 0u32]).to_owned()
    });
}
